# phantom-qa-mcp-server

./: README.md  pyproject.toml
client/: qa_client.py  qa_sse_client.py  weather_client.py
server/: qa_server.py  qa_sse_server.py
server/connectors/: azure_devops_connector.py
server/genai/: rag_handler.py
server/vectordb/: mongo_storage.py
