[project]
name = "qa-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-core>=1.33.0",
    "azure-devops>=7.1.0b4",
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-fireworks>=0.2.9",
    "langchain-mongodb>=0.6.1",
    "mcp[cli]>=1.6.0",
    "msrest>=0.7.1",
    "pydantic>=2.11.3",
    "pymongo>=4.12.0",
    "requests>=2.32.3",
]
